--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -39,7 +39,7 @@
             </a>
           </li>
           <li class="nav-item {% if 'order' in segment %} active {% endif %}">
-            <a class="nav-link" href="/order.html/{{ user.profile.id }}/">
+            <a class="nav-link" href="/order.html">
               <i class="material-icons">add_shopping_cart</i>
               <p>Ordem de compra</p>
             </a>
